objects/AccountHierarchyMember__c.object
<CustomObject>
    <fields>
        <fullName>AccountHierarchyLevel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Hierarchy Level</label>
        <referenceTo>AccountHierarchyLevel__c</referenceTo>
        <relationshipLabel>Account Hierarchy Members</relationshipLabel>
        <relationshipName>AccountHierarchyMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountHierarchyMemberEID__c</fullName>
        <description>The Enterprise ID for the Account Hierarchy Member.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for the Account Hierarchy Member.</inlineHelpText>
        <label>Account Hierarchy Member EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AccountHierarchyMemberLabelName__c</fullName>
        <label>Member Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountHierarchyMemberName__c</fullName>
        <label>Member Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Hierarchy Members</relationshipLabel>
        <relationshipName>AccountHierarchyMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClientHierarchyID__c</fullName>
        <description>The client&apos;s identification number or code for this hierarchy level member.</description>
        <externalId>true</externalId>
        <inlineHelpText>The client&apos;s identification number or code for this hierarchy level member.</inlineHelpText>
        <label>Client Hierarchy ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentAccountHierarchyMember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account Hierarchy Member</label>
        <referenceTo>AccountHierarchyMember__c</referenceTo>
        <relationshipLabel>Account Hierarchy Members</relationshipLabel>
        <relationshipName>AccountHierarchyMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Hierarchy Member</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>AccountHierarchyLevel__c</columns>
        <columns>AccountHierarchyMemberName__c</columns>
        <columns>AccountHierarchyMemberLabelName__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Account Hierarchy Member ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Hierarchy Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>